About, Experience, Footer sections mobile alignment issues fixed

--- a/style.css
+++ b/style.css
@@ -262,8 +262,7 @@ html
 #Experience_ #experience-container .exp
 {
     display: flex;
-    justify-content: space-between;
-    gap:5rem;
+    gap:8rem;
     font-size: 2rem;
 }
 #Experience_ #experience-container .exp .p
@@ -393,7 +392,7 @@ html
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width:100%;
+    text-align: center;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.1);
     padding: 7.5rem;
     gap:3rem;
@@ -554,7 +553,7 @@ html
         max-width: 100%;
         font-size: 0.6rem;
     }
-    #TechStack, #Experience_, #Projects_, #Contact_, #Footer_
+    #TechStack, #Experience_, #Projects_, #Contact_
     {
         padding: auto;
         margin: auto;
@@ -584,5 +583,9 @@ html
     #Contact_ ul a div
     {
         gap: 15rem;
+    }
+    #Footer_
+    {
+        margin:0;
     }
     }
